# vl53l5cx-driver

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  configure_sensor.rs
.cargo/: config.toml
src/: lib.rs  platform.rs
src/VL53L5CX_ULD_API/: platform.h  vl53l5cx_buffers.c  vl53l5cx_platform.h
src/example/: configure_sensor.rs
vl53l5cx-driver/: Cargo.toml
vl53l5cx-driver/examples/: configure_sensor.rs  core_ranging.rs  motion_setup.rs  thresholds_distance.rs  xtalk_config.rs
vl53l5cx-driver/src/: lib.rs  platform.rs
vl53l5cx-driver/src/examples/: configure_sensor.rs
vl53l5cx-sys/: Cargo.toml  LICENSE-ST  build.rs
vl53l5cx-sys/src/: lib.rs  wrappers.rs
vl53l5cx-sys/src/VL53L5CX_ULD_API/inc/: platform.h
