[package]
name = "vl53l5cx-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Ensure embedded-hal is version 1.0.0
embedded-hal = "1.0.0"

# Add these missing dependencies
once_cell = "1.19.0"

# These are for the example binary
anyhow = { version = "1.0.86", optional = true }
i2cdev = { version = "0.6.0", optional = true }

[build-dependencies]
cc = "1.0.101"
bindgen = "0.69.5"

[features]
default = ["std"]
# The `std` feature enables functionality that requires the standard library, such as `std::thread::sleep`. This is enabled by default.
std = []
# The `example` feature enables dependencies required for running the examples.
example = ["dep:anyhow", "dep:i2cdev"]
