[package]
name = "vl53l5cx-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1.0.0"
once_cell = { version = "1.19.0", default-features = false, features = ["alloc"] }

# Dependencies for the example binary only
anyhow = { version = "1.0.86", optional = true }
i2cdev = { version = "0.6.0", optional = true }

[build-dependencies]
cc = "1.0.101"
bindgen = "0.69.5"

[features]
default = ["std", "motion", "xtalk", "thresholds", "targets-1"]
std = []

# ST Driver Features
# Disabling these will reduce binary size and RAM usage
motion = []       # Motion Indicator
xtalk = []        # Crosstalk Calibration
thresholds = []   # Detection Thresholds

# Target Count Configuration
# These are mutually exclusive and control the VL53L5CX_NB_TARGET_PER_ZONE macro.
targets-1 = []
targets-2 = []
targets-3 = []
targets-4 = []

example = ["dep:anyhow", "dep:i2cdev"]