[package]
name = "vl53l5cx-driver"
version = "0.2.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A platform-agnostic Rust driver for the STMicroelectronics VL53L5CX Time-of-Flight sensor."
repository = "https://github.com/wakefarm/vl53l5cx-driver"
documentation = "https://docs.rs/vl53l5cx-driver"

[dependencies]
embedded-hal = "1.0.0" # Using the stable 1.0 version of the hardware abstraction layer.
vl53l5cx-sys = { path = "../vl53l5cx-sys", version = "0.2.0-rc.1" }

# Make i2cdev optional
i2cdev = { version = "0.6.2", optional = true }

[dependencies.embedded-hal-async]
# New dependency for asynchronous operation
version = "1.0.0"
optional = true 

[dev-dependencies]
anyhow = "1.0.100"

[features]
default = []
std = []

xtalk = ["vl53l5cx-sys/xtalk"]
motion = ["vl53l5cx-sys/motion"]
thresholds = ["vl53l5cx-sys/thresholds"]
raw-format = ["vl53l5cx-sys/raw-format"]

targets-1 = []
targets-2 = []
targets-3 = []
targets-4 = []
# Feature to enable the async implementation
async-hal = ["dep:embedded-hal-async"]

# Define a feature for the i2cdev backend
i2cdev-backend = ["i2cdev"]