[package]
name = "vl53l5cx-sys"
version = "0.2.0-rc.1"
edition = "2021"
description = "Low-level FFI bindings for the STMicroelectronics VL53L5CX Ultra Lite Driver (ULD)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/wakefarm/vl53l5cx-driver"
documentation = "https://docs.rs/vl53l5cx-driver"
links = "vl53l5cx_uld"

[dependencies]
cty = "0.2"

[build-dependencies]
bindgen = "0.69"
cc = "1.2"

[features]
xtalk = []
motion = []
thresholds = []